--- a/wakepark_front/src/home/index.html
+++ b/wakepark_front/src/home/index.html
@@ -1,14 +1,30 @@
 <template>
-    <div class="heading">
-      <h2>Männiku Wakepark</h2>
-    </div>
-    <div class="queue-container">
-      <div class="tracks-container">
-        <div class="tracks">
-          <div class="track"></div>
-          <div class="track"></div>
-          <div class="track"></div>
+  <div class="heading">
+    <h2 class="front">ESTRELLA WAKEPARK</h2>
+  </div>
+  <div class="queue-container">
+    <div class="tracks-container">
+      <div class="tracks">
+        <div class="track">
+          <div class="trackName" style="color: #37baff;">Live Fearless</div>
+          <div class="queue">
+            <div class="rider">Lisa-Marie Nüüd <br></div>
+            <div class="rider">Mirjam Mälksoo <br></div>
+          </div>
+        </div>
+        <div class="track">
+          <div class="trackName" style="color: #ff1212;">Estrella</div>
+          <div class="queue">
+            <div style="font-size: 15px;">Sellel rajal hetkel järjekorda ei ole</div>
+          </div>
+        </div>
+        <div class="track">
+          <div class="trackName" style="color: #000000;">Red Bull</div>
+          <div class="queue">
+            <div class="rider">Lisa-Marie Nüüd <br></div>
+          </div>
         </div>
       </div>
     </div>
+  </div>
 </template>
